--- a/Docs/temporal.Rmd
+++ b/Docs/temporal.Rmd
@@ -839,13 +839,15 @@ autoplot(fco2_rf_tune_grid)
 
 ```{r}
 collect_metrics(fco2_rf_tune_grid)
-fco2_rf_tune_grid %>%   show_best(metric = "rmse", n = 6)
+fco2_rf_tune_grid %>%   
+  show_best(metric = "rmse", n = 6)
 ```
 
 ### Desempenho modelo final
 ```{r}
 fco2_rf_best_params <- select_best(fco2_rf_tune_grid, "rmse")
-fco2_rf_wf <- fco2_rf_wf %>% finalize_workflow(fco2_rf_best_params)
+fco2_rf_wf <- fco2_rf_wf %>%
+  finalize_workflow(fco2_rf_best_params)
 fco2_rf_last_fit <- last_fit(fco2_rf_wf, fco2_initial_split)
 ```
 
@@ -853,8 +855,8 @@ fco2_rf_last_fit <- last_fit(fco2_rf_wf, fco2_initial_split)
 
 ```{r}
 fco2_test_preds <- bind_rows(
-  collect_predictions(fco2_rf_last_fit)  %>%   mutate(modelo = "rf")
-)
+  collect_predictions(fco2_rf_last_fit)  %>%   
+    mutate(modelo = "rf"))
 
 fco2_test <- testing(fco2_initial_split)
 visdat::vis_miss(fco2_test)
@@ -946,7 +948,7 @@ autoplot(fco2_xgb_tune_grid)
 ```
 
 ```{r}
-fco2_xgb_tune_grid   %>%   show_best(metric = "rmse", n = 6)
+fco2_xgb_tune_grid   %>%   show_best(metric = "rmse", n = 5)
 ```
 
 ```{r}
@@ -991,9 +993,14 @@ fco2_xgb_tune_grid <- fco2_xgb_wf   %>%
 #### Melhores hiperparâmetros
 autoplot(fco2_xgb_tune_grid)
 ```
+
+
+
 ```{r}
-fco2_xgb_tune_grid  %>%   show_best(metric = "rmse", n = 5)
-fco2_xgb_select_best_passo2 <- fco2_xgb_tune_grid  %>%   select_best(metric = "rmse")
+fco2_xgb_tune_grid  %>%   
+  show_best(metric = "rmse", n = 5)
+fco2_xgb_select_best_passo2 <- fco2_xgb_tune_grid  %>% 
+  select_best(metric = "rmse")
 fco2_xgb_select_best_passo2
 ```
 
@@ -1035,6 +1042,8 @@ fco2_xgb_tune_grid <- fco2_xgb_wf   %>%
 #### Melhores hiperparâmetros
 autoplot(fco2_xgb_tune_grid)
 ```
+
+
 ```{r}
 fco2_xgb_tune_grid   %>%   show_best(metric = "rmse", n = 5)
 fco2_xgb_select_best_passo3 <- fco2_xgb_tune_grid %>% select_best(metric = "rmse")
@@ -1080,8 +1089,10 @@ autoplot(fco2_xgb_tune_grid)
 ```
 
 ```{r}
-fco2_xgb_tune_grid  |>  show_best(metric = "rmse", n = 5)
-fco2_xgb_select_best_passo4 <- fco2_xgb_tune_grid   %>%   select_best(metric = "rmse")
+fco2_xgb_tune_grid  %>%  
+  show_best(metric = "rmse", n = 5)
+fco2_xgb_select_best_passo4 <- fco2_xgb_tune_grid   %>%
+  select_best(metric = "rmse")
 fco2_xgb_select_best_passo4
 ```
 
@@ -1097,7 +1108,7 @@ fco2_xgb_model <- boost_tree(
   loss_reduction = fco2_xgb_select_best_passo3$loss_reduction, 
   learn_rate = tune(), 
   sample_size = fco2_xgb_select_best_passo4$sample_size
-) |> 
+) %>% 
   set_mode("regression")  %>%  
   set_engine("xgboost", nthread = cores, counts = FALSE)
 
@@ -1127,8 +1138,10 @@ autoplot(fco2_xgb_tune_grid)
 ```
 
 ```{r}
-fco2_xgb_tune_grid  %>%   show_best(metric = "rmse", n = 5)
-fco2_xgb_select_best_passo5 <- fco2_xgb_tune_grid   %>%   select_best(metric = "rmse")
+fco2_xgb_tune_grid  %>%   
+  show_best(metric = "rmse", n = 5)
+fco2_xgb_select_best_passo5 <- fco2_xgb_tune_grid %>%
+  select_best(metric = "rmse")
 fco2_xgb_select_best_passo5
 ```
 
@@ -1166,13 +1179,14 @@ fco2_xgb_last_fit <- last_fit(fco2_xgb_wf, fco2_initial_split) # <--------
   
 ```{r}
 fco2_test_preds <- bind_rows(
-  collect_predictions(fco2_xgb_last_fit)  %>%   mutate(modelo = "xgb")
+  collect_predictions(fco2_xgb_last_fit)  %>%   
+    mutate(modelo = "xgb")
 )
 ```
   
 ```{r}
 fco2_test_preds %>% 
-  ggplot(aes(x=.pred, y=FCO2)) +
+  ggplot(aes(x=.pred, y = fco2)) +
   geom_point()+
   theme_bw() +
   geom_smooth(method = "lm") +
@@ -1195,15 +1209,15 @@ vip(fco2_xgb_last_fit_model,
 
 ```{r}
 da <- fco2_test_preds %>% 
-  filter(FCO2 > 0, .pred>0 )
+  filter(fco2 > 0, .pred>0 )
 
-my_r <- cor(da$FCO2,da$.pred)
+my_r <- cor(da$fco2,da$.pred)
 my_r2 <- my_r*my_r
-my_mse <- Metrics::mse(da$FCO2,da$.pred)
-my_rmse <- Metrics::rmse(da$FCO2,
+my_mse <- Metrics::mse(da$fco2,da$.pred)
+my_rmse <- Metrics::rmse(da$fco2,
                          da$.pred)
-my_mae <- Metrics::mae(da$FCO2,da$.pred)
-my_mape <- Metrics::mape(da$FCO2,da$.pred)*100
+my_mae <- Metrics::mae(da$fco2,da$.pred)
+my_mape <- Metrics::mape(da$fco2,da$.pred)*100
 
 vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape)
 print(data.frame(vector_of_metrics))
