--- a/Docs/temporal.Rmd
+++ b/Docs/temporal.Rmd
@@ -519,7 +519,147 @@ visdat::vis_miss(bake(prep(fco2_recipe), new_data = NULL))
 fco2_resamples <- vfold_cv(fco2_train, v = 5) 
 ```
 
-## Support Vector Machine
+
+
+
+## Rede Neural Artificial
+#### ϵ-insensitive loss regression (Flavor).
+https://www.r-bloggers.com/2020/03/machine-learning-with-tidymodels/
+
+### Definição do modelo
+
+Esquema da rede neural contendo 4 neurônios e algumas variáveis para exemplificação apenas.
+```{r}
+fco2_nn_model <- mlp(
+  hidden_units = 4) %>% # margin sempre para regressão
+  set_mode("regression") %>%
+  set_engine("nnet") %>% 
+  fit(fco2 ~ ., data = fco2_train %>% 
+            select(fco2:mo, hlifs,xco2,sif,tmed))
+NeuralNetTools::plotnet(fco2_nn_model$fit)
+```
+
+
+```{r}
+fco2_nn_model <- mlp(
+  hidden_units = tune(), 
+  penalty = tune(),
+  epochs = tune()
+  ) %>% # margin sempre para regressão
+  set_mode("regression") %>%
+  set_engine("nnet") 
+```
+
+
+### Workflow
+```{r}
+fco2_nn_wf <- workflow()   %>%  
+  add_model(fco2_nn_model) %>% 
+  add_recipe(fco2_recipe)
+```
+
+### Criando a matriz (grid) com os valores de hiperparâmetros a serem testados
+
+
+```{r}
+grid_nn <- expand.grid(
+  hidden_units = c(1,2,3,4,5,6,7),
+  penalty = c(1,5,10,15),
+  epochs = c(100, 1000, 5000)
+)
+glimpse(grid_nn)
+```
+### Tuning de hiperparâmetros
+
+```{r}
+fco2_nn_tune_grid <- tune_grid(
+  fco2_nn_wf,
+  resamples = fco2_resamples,
+  grid = grid_nn,
+  metrics = metric_set(rmse)
+)
+```
+
+```{r}
+autoplot(fco2_nn_tune_grid)
+```
+
+```{r}
+collect_metrics(fco2_nn_tune_grid)
+fco2_nn_tune_grid %>%   
+  show_best(metric = "rmse", n = 5)
+```
+
+
+### Desempenho dos modelos finais
+
+```{r}
+fco2_nn_best_params <- select_best(fco2_nn_tune_grid, "rmse")
+fco2_nn_wf <- fco2_nn_wf %>% 
+  finalize_workflow(fco2_nn_best_params)
+fco2_nn_last_fit <- last_fit(fco2_nn_wf, fco2_initial_split)
+```
+
+### Criando os preditos
+
+```{r}
+fco2_test_preds <- bind_rows(
+  collect_predictions(fco2_nn_last_fit)  %>%  
+    mutate(modelo = "nn")
+)
+
+fco2_test <- testing(fco2_initial_split)
+visdat::vis_miss(fco2_test)
+```
+
+```{r}
+fco2_test_preds %>% 
+  ggplot(aes(x=.pred, y=fco2)) +
+  geom_point()+
+  theme_bw() +
+  geom_smooth(method = "lm") +
+  stat_regline_equation(ggplot2::aes(
+  label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~"))) +
+  geom_abline (slope=1, linetype = "dashed", color="Red")
+```
+
+# Importância
+
+To compute the variable importance scores we just call vip() with method = "permute" and pass our previously defined predictions wrapper to the pred_wrapper argument. `estimate` should be a numeric vector, not a numeric matrix.
+
+
+```{r}
+fco2_nn_last_fit_model <-fco2_nn_last_fit$.workflow[[1]]$fit$fit
+vip(fco2_nn_last_fit_model,
+    aesthetics = list(color = "black", fill = "orange")) +
+    theme(axis.text.y=element_text(size=rel(1.5)),
+          axis.text.x=element_text(size=rel(1.5)),
+          axis.title.x=element_text(size=rel(1.5))
+          )
+```
+
+## Métricas
+
+```{r}
+da <- fco2_test_preds %>% 
+  filter(fco2 > 0, .pred>0 )
+
+my_r <- cor(da$fco2,da$.pred)
+my_r2 <- my_r*my_r
+my_mse <- Metrics::mse(da$fco2,da$.pred)
+my_rmse <- Metrics::rmse(da$fco2,
+                         da$.pred)
+my_mae <- Metrics::mae(da$fco2,da$.pred)
+my_mape <- Metrics::mape(da$fco2,da$.pred)*100
+
+vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape)
+print(data.frame(vector_of_metrics))
+```
+
+
+
+
+## Support Vector Machine - RDF
 #### ϵ-insensitive loss regression (Flavor).
 https://bradleyboehmke.github.io/HOML/svm.html
 https://stackoverflow.com/questions/77735850/variable-importance-plot-for-support-vector-machine-with-tidymodel-framework-is
@@ -658,6 +798,147 @@ my_mape <- Metrics::mape(da$fco2,da$.pred)*100
 vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape)
 print(data.frame(vector_of_metrics))
 ```
+
+## Support Vector Machine - Linear
+#### ϵ-insensitive loss regression (Flavor).
+https://bradleyboehmke.github.io/HOML/svm.html
+https://stackoverflow.com/questions/77735850/variable-importance-plot-for-support-vector-machine-with-tidymodel-framework-is
+
+### Definição do modelo
+```{r}
+fco2_svml_model <- svm_linear(
+  cost = tune(), 
+  margin = tune()) %>% # margin sempre para regressão
+  set_mode("regression") %>%
+  set_engine("kernlab") #%>% 
+  #translate()
+
+
+# fco2_svm_model <- svm_linear(
+#   cost = tune(),
+#   margin = tune()
+# ) %>%  
+#   set_engine("LiblineaR") %>% 
+#   set_mode("regression")
+```
+
+
+### Workflow
+```{r}
+fco2_svml_wf <- workflow()   %>%  
+  add_model(fco2_svml_model) %>% 
+  add_recipe(fco2_recipe)
+```
+
+### Criando a matriz (grid) com os valores de hiperparâmetros a serem testados
+
+
+```{r}
+grid_svml <- expand.grid(
+  cost = c(0.01, 0.0625, 0.1, 0.5, 1, 10, 20, 50),
+  margin = c(0.175,0.5,0.55,0.6,0.75)
+)
+glimpse(grid_svml)
+```
+### Tuning de hiperparâmetros
+
+```{r}
+fco2_svml_tune_grid <- tune_grid(
+  fco2_svml_wf,
+  resamples = fco2_resamples,
+  grid = grid_svml,
+  metrics = metric_set(rmse)
+)
+```
+
+```{r}
+autoplot(fco2_svml_tune_grid)
+```
+
+```{r}
+collect_metrics(fco2_svml_tune_grid)
+fco2_svml_tune_grid %>%   
+  show_best(metric = "rmse", n = 5)
+```
+
+
+### Desempenho dos modelos finais
+
+```{r}
+fco2_svml_best_params <- select_best(fco2_svml_tune_grid, "rmse")
+fco2_svml_wf <- fco2_svml_wf %>% 
+  finalize_workflow(fco2_svml_best_params)
+fco2_svml_last_fit <- last_fit(fco2_svml_wf, fco2_initial_split)
+```
+
+### Criando os preditos
+
+```{r}
+fco2_test_preds <- bind_rows(
+  collect_predictions(fco2_svml_last_fit)  %>%  
+    mutate(modelo = "svml")
+)
+
+fco2_test <- testing(fco2_initial_split)
+visdat::vis_miss(fco2_test)
+```
+
+```{r}
+fco2_test_preds %>% 
+  ggplot(aes(x=.pred, y=fco2)) +
+  geom_point()+
+  theme_bw() +
+  geom_smooth(method = "lm") +
+  stat_regline_equation(ggplot2::aes(
+  label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~"))) +
+  geom_abline (slope=1, linetype = "dashed", color="Red")
+```
+
+# Importância
+
+To compute the variable importance scores we just call vip() with method = "permute" and pass our previously defined predictions wrapper to the pred_wrapper argument. `estimate` should be a numeric vector, not a numeric matrix.
+
+
+```{r}
+fco2_svml_last_fit_model <- fco2_svml_last_fit$.workflow[[1]]$fit$fit
+fco2_svml_last_fit %>%
+  extract_fit_parsnip() %>%
+  vip(
+    method = "permute", 
+    target = "fco2", 
+    metric = "rmse",
+    nsim = 5,
+    pred_wrapper = function(object, newdata)
+      as.vector(kernlab::predict(object, newdata)),
+    train = fco2_train %>% 
+            select(fco2:hlifs,xco2,sif,tmed:inso),
+     aesthetics = list(color = "black", fill = "orange")) +
+    theme(axis.text.y=element_text(size=rel(1.5)),
+          axis.text.x=element_text(size=rel(1.5)),
+          axis.title.x=element_text(size=rel(1.5))
+          )
+```
+
+## Métricas
+
+```{r}
+da <- fco2_test_preds %>% 
+  filter(fco2 > 0, .pred>0 )
+
+my_r <- cor(da$fco2,da$.pred)
+my_r2 <- my_r*my_r
+my_mse <- Metrics::mse(da$fco2,da$.pred)
+my_rmse <- Metrics::rmse(da$fco2,
+                         da$.pred)
+my_mae <- Metrics::mae(da$fco2,da$.pred)
+my_mape <- Metrics::mape(da$fco2,da$.pred)*100
+
+vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape)
+print(data.frame(vector_of_metrics))
+```
+
+
+
 
 ## Árvore de Decisão
 
