--- a/Docs/temporal.Rmd
+++ b/Docs/temporal.Rmd
@@ -1,6 +1,3 @@
----
-output: github_document
----
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
@@ -40,7 +37,7 @@ Você pode instalar uma versão de desenvolvimento do pacote `fco2r` a partir do
 
 ```{r,eval=FALSE}
 # install.packages("devtools")
-# devtools::install_github("arpanosso/fco2r")
+# devtools::install_github("arpanosso/fco2r",force = TRUE)
 ```
 
 ### Problemas na instalação:
@@ -90,7 +87,22 @@ glimpse(data_fco2)
 Vamos conhecer, um pouco mais a nossa base de dados.
 
 ```{r}
-skimr::skim(data_fco2)
+data_fco2 %>% 
+  filter(experimento == "Espacial",
+         data >= "01-01-2019") %>% 
+  mutate(
+    municipio = case_when(
+      municipio == "Selv?ra" ~ "Selvíria",
+      municipio == "Selv?ria" ~ "Selvíria",
+      municipio == "Prad?polis" ~ "Pradópolis",
+      TRUE ~ municipio
+    ),
+    ano = year(data)
+  ) %>% 
+  filter(ano == 2018,
+         tratamento == "SI") %>% 
+  ggplot(aes(x=x,y=y)) +
+  geom_point()
 ```
 
 ### Alguns gráficos a respeito de nossa variável alvo, emissão de CO~2~ do solo (FCO~2~).
@@ -498,7 +510,7 @@ fco2_recipe <- recipe(fco2 ~ .,
                       data = fco2_train %>% 
             select(fco2:hlifs,xco2,sif,tmed:inso) 
 ) %>%  
-  # step_normalize(all_numeric_predictors())  %>% 
+  step_normalize(all_numeric_predictors())  %>% 
   step_naomit() %>%  
   step_novel(all_nominal_predictors()) %>% 
   step_zv(all_predictors()) %>%
@@ -563,9 +575,9 @@ fco2_nn_wf <- workflow()   %>%
 
 ```{r}
 grid_nn <- expand.grid(
-  hidden_units = c(1,2,3,4,5,6,7),
-  penalty = c(1,5,10,15),
-  epochs = c(100, 1000, 5000)
+  hidden_units = c(1,5,6,7,8,15),
+  penalty = c(1,5,10,20),
+  epochs = c(50,100,500,1000)
 )
 glimpse(grid_nn)
 ```
@@ -594,7 +606,7 @@ fco2_nn_tune_grid %>%
 ### Desempenho dos modelos finais
 
 ```{r}
-fco2_nn_best_params <- select_best(fco2_nn_tune_grid, "rmse")
+fco2_nn_best_params <- select_best(fco2_nn_tune_grid, metric = "rmse")
 fco2_nn_wf <- fco2_nn_wf %>% 
   finalize_workflow(fco2_nn_best_params)
 fco2_nn_last_fit <- last_fit(fco2_nn_wf, fco2_initial_split)
@@ -727,7 +739,7 @@ fco2_svm_tune_grid %>%
 ### Desempenho dos modelos finais
 
 ```{r}
-fco2_svm_best_params <- select_best(fco2_svm_tune_grid, "rmse")
+fco2_svm_best_params <- select_best(fco2_svm_tune_grid, metric = "rmse")
 fco2_svm_wf <- fco2_svm_wf %>% 
   finalize_workflow(fco2_svm_best_params)
 fco2_svm_last_fit <- last_fit(fco2_svm_wf, fco2_initial_split)
@@ -865,7 +877,7 @@ fco2_svml_tune_grid %>%
 ### Desempenho dos modelos finais
 
 ```{r}
-fco2_svml_best_params <- select_best(fco2_svml_tune_grid, "rmse")
+fco2_svml_best_params <- select_best(fco2_svml_tune_grid, metric = "rmse")
 fco2_svml_wf <- fco2_svml_wf %>% 
   finalize_workflow(fco2_svml_best_params)
 fco2_svml_last_fit <- last_fit(fco2_svml_wf, fco2_initial_split)
@@ -1003,7 +1015,7 @@ fco2_dt_tune_grid %>%   show_best(metric = "rmse", n = 6)
 ### Desempenho dos modelos finais
 
 ```{r}
-fco2_dt_best_params <- select_best(fco2_dt_tune_grid, "rmse")
+fco2_dt_best_params <- select_best(fco2_dt_tune_grid, metric = "rmse")
 fco2_dt_wf <- fco2_dt_wf %>% finalize_workflow(fco2_dt_best_params)
 fco2_dt_last_fit <- last_fit(fco2_dt_wf, fco2_initial_split)
 ```
@@ -1104,404 +1116,404 @@ grid_rf <- expand.grid(
 )
 ```
 
-```{r}
-fco2_rf_tune_grid <- tune_grid(
- fco2_rf_wf,
-  resamples = fco2_resamples,
-  grid = grid_rf,
-  metrics = metric_set(rmse)
-)
-```
+<!-- ```{r} -->
+<!-- fco2_rf_tune_grid <- tune_grid( -->
+<!--  fco2_rf_wf, -->
+<!--   resamples = fco2_resamples, -->
+<!--   grid = grid_rf, -->
+<!--   metrics = metric_set(rmse) -->
+<!-- ) -->
+<!-- ``` -->
 
 
-```{r}
-autoplot(fco2_rf_tune_grid)
-```
+<!-- ```{r} -->
+<!-- autoplot(fco2_rf_tune_grid) -->
+<!-- ``` -->
 
-```{r}
-collect_metrics(fco2_rf_tune_grid)
-fco2_rf_tune_grid %>%   
-  show_best(metric = "rmse", n = 6)
-```
+<!-- ```{r} -->
+<!-- collect_metrics(fco2_rf_tune_grid) -->
+<!-- fco2_rf_tune_grid %>%    -->
+<!--   show_best(metric = "rmse", n = 6) -->
+<!-- ``` -->
 
-### Desempenho modelo final
-```{r}
-fco2_rf_best_params <- select_best(fco2_rf_tune_grid, "rmse")
-fco2_rf_wf <- fco2_rf_wf %>%
-  finalize_workflow(fco2_rf_best_params)
-fco2_rf_last_fit <- last_fit(fco2_rf_wf, fco2_initial_split)
-```
+<!-- ### Desempenho modelo final -->
+<!-- ```{r} -->
+<!-- fco2_rf_best_params <- select_best(fco2_rf_tune_grid, metric = "rmse") -->
+<!-- fco2_rf_wf <- fco2_rf_wf %>% -->
+<!--   finalize_workflow(fco2_rf_best_params) -->
+<!-- fco2_rf_last_fit <- last_fit(fco2_rf_wf, fco2_initial_split) -->
+<!-- ``` -->
 
-### Criando os preditos
+<!-- ### Criando os preditos -->
 
-```{r}
-fco2_test_preds <- bind_rows(
-  collect_predictions(fco2_rf_last_fit)  %>%   
-    mutate(modelo = "rf"))
+<!-- ```{r} -->
+<!-- fco2_test_preds <- bind_rows( -->
+<!--   collect_predictions(fco2_rf_last_fit)  %>%    -->
+<!--     mutate(modelo = "rf")) -->
 
-fco2_test <- testing(fco2_initial_split)
-visdat::vis_miss(fco2_test)
-```
+<!-- fco2_test <- testing(fco2_initial_split) -->
+<!-- visdat::vis_miss(fco2_test) -->
+<!-- ``` -->
 
-```{r}
-fco2_test_preds %>% 
-  ggplot(aes(x=.pred, y=fco2)) +
-  geom_point()+
-  theme_bw() +
-  geom_smooth(method = "lm") +
-  stat_regline_equation(ggplot2::aes(
-  label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~"))) +
-  geom_abline (slope=1, linetype = "dashed", color="Red")
-```
+<!-- ```{r} -->
+<!-- fco2_test_preds %>%  -->
+<!--   ggplot(aes(x=.pred, y=fco2)) + -->
+<!--   geom_point()+ -->
+<!--   theme_bw() + -->
+<!--   geom_smooth(method = "lm") + -->
+<!--   stat_regline_equation(ggplot2::aes( -->
+<!--   label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~"))) + -->
+<!--   geom_abline (slope=1, linetype = "dashed", color="Red") -->
+<!-- ``` -->
 
-# Importância
+<!-- # Importância -->
 
-```{r}
-fco2_rf_last_fit_model <-fco2_rf_last_fit$.workflow[[1]]$fit$fit
-vip(fco2_rf_last_fit_model,
-    aesthetics = list(color = "black", fill = "orange")) +
-    theme(axis.text.y=element_text(size=rel(1.5)),
-          axis.text.x=element_text(size=rel(1.5)),
-          axis.title.x=element_text(size=rel(1.5))
-          )
-```
-## Métricas
+<!-- ```{r} -->
+<!-- fco2_rf_last_fit_model <-fco2_rf_last_fit$.workflow[[1]]$fit$fit -->
+<!-- vip(fco2_rf_last_fit_model, -->
+<!--     aesthetics = list(color = "black", fill = "orange")) + -->
+<!--     theme(axis.text.y=element_text(size=rel(1.5)), -->
+<!--           axis.text.x=element_text(size=rel(1.5)), -->
+<!--           axis.title.x=element_text(size=rel(1.5)) -->
+<!--           ) -->
+<!-- ``` -->
+<!-- ## Métricas -->
 
-```{r}
-da <- fco2_test_preds %>% 
-  filter(fco2 > 0, .pred>0 )
+<!-- ```{r} -->
+<!-- da <- fco2_test_preds %>%  -->
+<!--   filter(fco2 > 0, .pred>0 ) -->
 
-my_r <- cor(da$fco2,da$.pred)
-my_r2 <- my_r*my_r
-my_mse <- Metrics::mse(da$fco2,da$.pred)
-my_rmse <- Metrics::rmse(da$fco2,
-                         da$.pred)
-my_mae <- Metrics::mae(da$fco2,da$.pred)
-my_mape <- Metrics::mape(da$fco2,da$.pred)*100
-
-
-vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape)
-print(data.frame(vector_of_metrics))
-```
-
-## Boosting gradient tree (xgb)
-
-```{r}
-cores = 4
-fco2_xgb_model <- boost_tree(
-  mtry = 0.8, 
-  trees = tune(), # <---------------
-  min_n = 5, 
-  tree_depth = 4,
-  loss_reduction = 0, # lambda
-  learn_rate = tune(), # epsilon
-  sample_size = 0.8
-)  %>%   
-  set_mode("regression")  %>% 
-  set_engine("xgboost", nthread = cores, counts = FALSE)
-```
-
-```{r}
-fco2_xgb_wf <- workflow()  %>%  
-  add_model(fco2_xgb_model) %>%  
-  add_recipe(fco2_recipe)
-```
+<!-- my_r <- cor(da$fco2,da$.pred) -->
+<!-- my_r2 <- my_r*my_r -->
+<!-- my_mse <- Metrics::mse(da$fco2,da$.pred) -->
+<!-- my_rmse <- Metrics::rmse(da$fco2, -->
+<!--                          da$.pred) -->
+<!-- my_mae <- Metrics::mae(da$fco2,da$.pred) -->
+<!-- my_mape <- Metrics::mape(da$fco2,da$.pred)*100 -->
 
 
-```{r}
-grid_xgb <- grid_regular(
-  learn_rate(range =  c(0.005, 0.3)),
-  trees(range = c(3, 100)),
-  levels = 5
-)
-```
+<!-- vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape) -->
+<!-- print(data.frame(vector_of_metrics)) -->
+<!-- ``` -->
 
-#### Passo 1
+<!-- ## Boosting gradient tree (xgb) -->
 
-```{r}
-fco2_xgb_tune_grid <- tune_grid(
- fco2_xgb_wf,
-  resamples = fco2_resamples,
-  grid = grid_xgb,
-  metrics = metric_set(rmse)
-)
-autoplot(fco2_xgb_tune_grid)
-```
+<!-- ```{r} -->
+<!-- cores = 4 -->
+<!-- fco2_xgb_model <- boost_tree( -->
+<!--   mtry = 0.8,  -->
+<!--   trees = tune(), # <--------------- -->
+<!--   min_n = 5,  -->
+<!--   tree_depth = 4, -->
+<!--   loss_reduction = 0, # lambda -->
+<!--   learn_rate = tune(), # epsilon -->
+<!--   sample_size = 0.8 -->
+<!-- )  %>%    -->
+<!--   set_mode("regression")  %>%  -->
+<!--   set_engine("xgboost", nthread = cores, counts = FALSE) -->
+<!-- ``` -->
 
-```{r}
-fco2_xgb_tune_grid   %>%   show_best(metric = "rmse", n = 5)
-```
-
-```{r}
-fco2_xgb_select_best_passo1 <- fco2_xgb_tune_grid %>% 
-  select_best(metric = "rmse")
-fco2_xgb_select_best_passo1
-```
-#### Passo 2
-```{r}
-fco2_xgb_model <- boost_tree(
-  mtry = 0.8,
-  trees = fco2_xgb_select_best_passo1$trees,
-  min_n = tune(),
-  tree_depth = tune(), 
-  loss_reduction = 0, 
-  learn_rate = fco2_xgb_select_best_passo1$learn_rate, 
-  sample_size = 0.8
-) %>% 
-  set_mode("regression")  %>% 
-  set_engine("xgboost", nthread = cores, counts = FALSE)
-
-#### Workflow
-fco2_xgb_wf <- workflow() %>%  
-    add_model(fco2_xgb_model)   %>%   
-    add_recipe(fco2_recipe)
-
-#### Grid
-fco2_xgb_grid <- grid_regular(
-  tree_depth(range = c(1, 4)), 
-  min_n(range = c(5, 60)),
-  levels = 5
-)
-
-fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
-  tune_grid(
-    resamples =fco2_resamples,
-    grid = fco2_xgb_grid,
-    control = control_grid(save_pred = TRUE, verbose = FALSE, allow_par = TRUE),
-    metrics = metric_set(rmse)
-  )
-
-#### Melhores hiperparâmetros
-autoplot(fco2_xgb_tune_grid)
-```
+<!-- ```{r} -->
+<!-- fco2_xgb_wf <- workflow()  %>%   -->
+<!--   add_model(fco2_xgb_model) %>%   -->
+<!--   add_recipe(fco2_recipe) -->
+<!-- ``` -->
 
 
+<!-- ```{r} -->
+<!-- grid_xgb <- grid_regular( -->
+<!--   learn_rate(range =  c(0.005, 0.3)), -->
+<!--   trees(range = c(3, 100)), -->
+<!--   levels = 5 -->
+<!-- ) -->
+<!-- ``` -->
 
-```{r}
-fco2_xgb_tune_grid  %>%   
-  show_best(metric = "rmse", n = 5)
-fco2_xgb_select_best_passo2 <- fco2_xgb_tune_grid  %>% 
-  select_best(metric = "rmse")
-fco2_xgb_select_best_passo2
-```
+<!-- #### Passo 1 -->
 
-## Passo 3
-```{r}
-fco2_xgb_model <- boost_tree(
-  mtry = 0.8,
-  trees = fco2_xgb_select_best_passo1$trees,
-  min_n = fco2_xgb_select_best_passo2$min_n,
-  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
-  loss_reduction =tune(), 
-  learn_rate = fco2_xgb_select_best_passo1$learn_rate, 
-  sample_size = 0.8
-)  %>%  
-  set_mode("regression")  %>%  
-  set_engine("xgboost", nthread = cores, counts = FALSE)
+<!-- ```{r} -->
+<!-- fco2_xgb_tune_grid <- tune_grid( -->
+<!--  fco2_xgb_wf, -->
+<!--   resamples = fco2_resamples, -->
+<!--   grid = grid_xgb, -->
+<!--   metrics = metric_set(rmse) -->
+<!-- ) -->
+<!-- autoplot(fco2_xgb_tune_grid) -->
+<!-- ``` -->
 
-#### Workflow
-fco2_xgb_wf <- workflow()  %>%   
-    add_model(fco2_xgb_model)  %>%   
-    add_recipe(fco2_recipe)
+<!-- ```{r} -->
+<!-- fco2_xgb_tune_grid   %>%   show_best(metric = "rmse", n = 5) -->
+<!-- ``` -->
 
-#### Grid
-fco2_xgb_grid <- grid_regular(
-  loss_reduction(range = c(0.01, 8)),
-  levels = 6
-)
+<!-- ```{r} -->
+<!-- fco2_xgb_select_best_passo1 <- fco2_xgb_tune_grid %>%  -->
+<!--   select_best(metric = "rmse") -->
+<!-- fco2_xgb_select_best_passo1 -->
+<!-- ``` -->
+<!-- #### Passo 2 -->
+<!-- ```{r} -->
+<!-- fco2_xgb_model <- boost_tree( -->
+<!--   mtry = 0.8, -->
+<!--   trees = fco2_xgb_select_best_passo1$trees, -->
+<!--   min_n = tune(), -->
+<!--   tree_depth = tune(),  -->
+<!--   loss_reduction = 0,  -->
+<!--   learn_rate = fco2_xgb_select_best_passo1$learn_rate,  -->
+<!--   sample_size = 0.8 -->
+<!-- ) %>%  -->
+<!--   set_mode("regression")  %>%  -->
+<!--   set_engine("xgboost", nthread = cores, counts = FALSE) -->
 
-fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
-  tune_grid(
-    resamples = fco2_resamples,
-    grid = fco2_xgb_grid,
-    control = control_grid(save_pred = TRUE, 
-                           verbose = FALSE, 
-                           allow_par = TRUE),
-    metrics = metric_set(rmse)
-  )
+<!-- #### Workflow -->
+<!-- fco2_xgb_wf <- workflow() %>%   -->
+<!--     add_model(fco2_xgb_model)   %>%    -->
+<!--     add_recipe(fco2_recipe) -->
 
-#### Melhores hiperparâmetros
-autoplot(fco2_xgb_tune_grid)
-```
+<!-- #### Grid -->
+<!-- fco2_xgb_grid <- grid_regular( -->
+<!--   tree_depth(range = c(1, 4)),  -->
+<!--   min_n(range = c(5, 60)), -->
+<!--   levels = 5 -->
+<!-- ) -->
 
+<!-- fco2_xgb_tune_grid <- fco2_xgb_wf   %>%    -->
+<!--   tune_grid( -->
+<!--     resamples =fco2_resamples, -->
+<!--     grid = fco2_xgb_grid, -->
+<!--     control = control_grid(save_pred = TRUE, verbose = FALSE, allow_par = TRUE), -->
+<!--     metrics = metric_set(rmse) -->
+<!--   ) -->
 
-```{r}
-fco2_xgb_tune_grid   %>%   show_best(metric = "rmse", n = 5)
-fco2_xgb_select_best_passo3 <- fco2_xgb_tune_grid %>% select_best(metric = "rmse")
-fco2_xgb_select_best_passo3
-```
-
-### Passo 4
-```{r}
-fco2_xgb_model <- boost_tree(
-  mtry = tune(),
-  trees = fco2_xgb_select_best_passo1$trees,
-  min_n = fco2_xgb_select_best_passo2$min_n,
-  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
-  loss_reduction = fco2_xgb_select_best_passo3$loss_reduction, 
-  learn_rate = fco2_xgb_select_best_passo1$learn_rate, 
-  sample_size = tune()
-)%>%  
-  set_mode("regression")  |> 
-  set_engine("xgboost", nthread = cores, counts = FALSE)
-
-#### Workflow
-fco2_xgb_wf <- workflow()  %>%   
-    add_model(fco2_xgb_model)  %>%   
-    add_recipe(fco2_recipe)
-
-#### Grid
-fco2_xgb_grid <- expand.grid(
-    sample_size = seq(0.5, 1.0, length.out = 4), ## <---
-    mtry = seq(0.1, 1.0, length.out = 4) ## <---
-)
-
-fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
-  tune_grid(
-    resamples = fco2_resamples,
-    grid = fco2_xgb_grid,
-    control = control_grid(save_pred = TRUE, 
-                           verbose = FALSE, 
-                           allow_par = TRUE),
-    metrics = metric_set(rmse)
-  )
-
-autoplot(fco2_xgb_tune_grid)
-```
-
-```{r}
-fco2_xgb_tune_grid  %>%  
-  show_best(metric = "rmse", n = 5)
-fco2_xgb_select_best_passo4 <- fco2_xgb_tune_grid   %>%
-  select_best(metric = "rmse")
-fco2_xgb_select_best_passo4
-```
+<!-- #### Melhores hiperparâmetros -->
+<!-- autoplot(fco2_xgb_tune_grid) -->
+<!-- ``` -->
 
 
-### Passo 5
 
-```{r}
-fco2_xgb_model <- boost_tree(
-  mtry = fco2_xgb_select_best_passo4$mtry,
-  trees = tune(),
-  min_n = fco2_xgb_select_best_passo2$min_n,
-  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
-  loss_reduction = fco2_xgb_select_best_passo3$loss_reduction, 
-  learn_rate = tune(), 
-  sample_size = fco2_xgb_select_best_passo4$sample_size
-) %>% 
-  set_mode("regression")  %>%  
-  set_engine("xgboost", nthread = cores, counts = FALSE)
+<!-- ```{r} -->
+<!-- fco2_xgb_tune_grid  %>%    -->
+<!--   show_best(metric = "rmse", n = 5) -->
+<!-- fco2_xgb_select_best_passo2 <- fco2_xgb_tune_grid  %>%  -->
+<!--   select_best(metric = "rmse") -->
+<!-- fco2_xgb_select_best_passo2 -->
+<!-- ``` -->
 
-#### Workflow
-fco2_xgb_wf <- workflow() %>%   
-    add_model(fco2_xgb_model)  %>%   
-    add_recipe(fco2_recipe)
+<!-- ## Passo 3 -->
+<!-- ```{r} -->
+<!-- fco2_xgb_model <- boost_tree( -->
+<!--   mtry = 0.8, -->
+<!--   trees = fco2_xgb_select_best_passo1$trees, -->
+<!--   min_n = fco2_xgb_select_best_passo2$min_n, -->
+<!--   tree_depth = fco2_xgb_select_best_passo2$tree_depth,  -->
+<!--   loss_reduction =tune(),  -->
+<!--   learn_rate = fco2_xgb_select_best_passo1$learn_rate,  -->
+<!--   sample_size = 0.8 -->
+<!-- )  %>%   -->
+<!--   set_mode("regression")  %>%   -->
+<!--   set_engine("xgboost", nthread = cores, counts = FALSE) -->
 
-#### Grid
-fco2_xgb_grid <- expand.grid(
-    learn_rate = c(0.10, 0.15, 0.25, 0.50),
-    trees = c(100, 250, 500)
-)
+<!-- #### Workflow -->
+<!-- fco2_xgb_wf <- workflow()  %>%    -->
+<!--     add_model(fco2_xgb_model)  %>%    -->
+<!--     add_recipe(fco2_recipe) -->
 
-fco2_xgb_tune_grid <- fco2_xgb_wf   %>%   
-  tune_grid(
-    resamples = fco2_resamples,
-    grid = fco2_xgb_grid,
-    control = control_grid(save_pred = TRUE, 
-                           verbose = FALSE, 
-                           allow_par = TRUE),
-    metrics = metric_set(rmse)
-  )
+<!-- #### Grid -->
+<!-- fco2_xgb_grid <- grid_regular( -->
+<!--   loss_reduction(range = c(0.01, 8)), -->
+<!--   levels = 6 -->
+<!-- ) -->
 
-#### Melhores hiperparâmetros
-autoplot(fco2_xgb_tune_grid)
-```
+<!-- fco2_xgb_tune_grid <- fco2_xgb_wf   %>%    -->
+<!--   tune_grid( -->
+<!--     resamples = fco2_resamples, -->
+<!--     grid = fco2_xgb_grid, -->
+<!--     control = control_grid(save_pred = TRUE,  -->
+<!--                            verbose = FALSE,  -->
+<!--                            allow_par = TRUE), -->
+<!--     metrics = metric_set(rmse) -->
+<!--   ) -->
 
-```{r}
-fco2_xgb_tune_grid  %>%   
-  show_best(metric = "rmse", n = 5)
-fco2_xgb_select_best_passo5 <- fco2_xgb_tune_grid %>%
-  select_best(metric = "rmse")
-fco2_xgb_select_best_passo5
-```
+<!-- #### Melhores hiperparâmetros -->
+<!-- autoplot(fco2_xgb_tune_grid) -->
+<!-- ``` -->
 
-## Desempenho dos modelos finais
 
-```{r}
-fco2_xgb_model <- boost_tree(
-  mtry = fco2_xgb_select_best_passo4$mtry,
-  trees = fco2_xgb_select_best_passo5$trees,
-  min_n = fco2_xgb_select_best_passo2$min_n,
-  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
-  loss_reduction = fco2_xgb_select_best_passo3$loss_reduction, 
-  learn_rate = fco2_xgb_select_best_passo5$learn_rate, 
-  sample_size = fco2_xgb_select_best_passo4$sample_size
-) %>%  
-  set_mode("regression")  %>%  
-  set_engine("xgboost", nthread = cores, counts = FALSE)
-```
+<!-- ```{r} -->
+<!-- fco2_xgb_tune_grid   %>%   show_best(metric = "rmse", n = 5) -->
+<!-- fco2_xgb_select_best_passo3 <- fco2_xgb_tune_grid %>% select_best(metric = "rmse") -->
+<!-- fco2_xgb_select_best_passo3 -->
+<!-- ``` -->
 
-```{r}
-df <- data.frame(
-  mtry = fco2_xgb_select_best_passo4$mtry,
-  trees = fco2_xgb_select_best_passo5$trees,
-  min_n = fco2_xgb_select_best_passo2$min_n,
-  tree_depth = fco2_xgb_select_best_passo2$tree_depth, 
-  loss_reduction = fco2_xgb_select_best_passo3$loss_reduction, 
-  learn_rate = fco2_xgb_select_best_passo5$learn_rate, 
-  sample_size = fco2_xgb_select_best_passo4$sample_size
-)
-fco2_xgb_wf <- fco2_xgb_wf %>% finalize_workflow(df) # <------
-fco2_xgb_last_fit <- last_fit(fco2_xgb_wf, fco2_initial_split) # <--------
-```
+<!-- ### Passo 4 -->
+<!-- ```{r} -->
+<!-- fco2_xgb_model <- boost_tree( -->
+<!--   mtry = tune(), -->
+<!--   trees = fco2_xgb_select_best_passo1$trees, -->
+<!--   min_n = fco2_xgb_select_best_passo2$min_n, -->
+<!--   tree_depth = fco2_xgb_select_best_passo2$tree_depth,  -->
+<!--   loss_reduction = fco2_xgb_select_best_passo3$loss_reduction,  -->
+<!--   learn_rate = fco2_xgb_select_best_passo1$learn_rate,  -->
+<!--   sample_size = tune() -->
+<!-- )%>%   -->
+<!--   set_mode("regression")  |>  -->
+<!--   set_engine("xgboost", nthread = cores, counts = FALSE) -->
 
-## Criar Preditos
-  
-```{r}
-fco2_test_preds <- bind_rows(
-  collect_predictions(fco2_xgb_last_fit)  %>%   
-    mutate(modelo = "xgb")
-)
-```
-  
-```{r}
-fco2_test_preds %>% 
-  ggplot(aes(x=.pred, y = fco2)) +
-  geom_point()+
-  theme_bw() +
-  geom_smooth(method = "lm") +
-  stat_regline_equation(ggplot2::aes(
-  label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~")))+
-  geom_abline (slope=1, linetype = "dashed", color="Red")
-```
+<!-- #### Workflow -->
+<!-- fco2_xgb_wf <- workflow()  %>%    -->
+<!--     add_model(fco2_xgb_model)  %>%    -->
+<!--     add_recipe(fco2_recipe) -->
 
-```{r}
-fco2_xgb_last_fit_model <-fco2_xgb_last_fit$.workflow[[1]]$fit$fit
-vip(fco2_xgb_last_fit_model,
-    aesthetics = list(color = "black", fill = "orange")) +
-    theme(axis.text.y=element_text(size=rel(1.5)),
-          axis.text.x=element_text(size=rel(1.5)),
-          axis.title.x=element_text(size=rel(1.5))
-          )
-```
+<!-- #### Grid -->
+<!-- fco2_xgb_grid <- expand.grid( -->
+<!--     sample_size = seq(0.5, 1.0, length.out = 4), ## <--- -->
+<!--     mtry = seq(0.1, 1.0, length.out = 4) ## <--- -->
+<!-- ) -->
 
-## Métricas
+<!-- fco2_xgb_tune_grid <- fco2_xgb_wf   %>%    -->
+<!--   tune_grid( -->
+<!--     resamples = fco2_resamples, -->
+<!--     grid = fco2_xgb_grid, -->
+<!--     control = control_grid(save_pred = TRUE,  -->
+<!--                            verbose = FALSE,  -->
+<!--                            allow_par = TRUE), -->
+<!--     metrics = metric_set(rmse) -->
+<!--   ) -->
 
-```{r}
-da <- fco2_test_preds %>% 
-  filter(fco2 > 0, .pred>0 )
+<!-- autoplot(fco2_xgb_tune_grid) -->
+<!-- ``` -->
 
-my_r <- cor(da$fco2,da$.pred)
-my_r2 <- my_r*my_r
-my_mse <- Metrics::mse(da$fco2,da$.pred)
-my_rmse <- Metrics::rmse(da$fco2,
-                         da$.pred)
-my_mae <- Metrics::mae(da$fco2,da$.pred)
-my_mape <- Metrics::mape(da$fco2,da$.pred)*100
+<!-- ```{r} -->
+<!-- fco2_xgb_tune_grid  %>%   -->
+<!--   show_best(metric = "rmse", n = 5) -->
+<!-- fco2_xgb_select_best_passo4 <- fco2_xgb_tune_grid   %>% -->
+<!--   select_best(metric = "rmse") -->
+<!-- fco2_xgb_select_best_passo4 -->
+<!-- ``` -->
 
-vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape)
-print(data.frame(vector_of_metrics))
-```
+
+<!-- ### Passo 5 -->
+
+<!-- ```{r} -->
+<!-- fco2_xgb_model <- boost_tree( -->
+<!--   mtry = fco2_xgb_select_best_passo4$mtry, -->
+<!--   trees = tune(), -->
+<!--   min_n = fco2_xgb_select_best_passo2$min_n, -->
+<!--   tree_depth = fco2_xgb_select_best_passo2$tree_depth,  -->
+<!--   loss_reduction = fco2_xgb_select_best_passo3$loss_reduction,  -->
+<!--   learn_rate = tune(),  -->
+<!--   sample_size = fco2_xgb_select_best_passo4$sample_size -->
+<!-- ) %>%  -->
+<!--   set_mode("regression")  %>%   -->
+<!--   set_engine("xgboost", nthread = cores, counts = FALSE) -->
+
+<!-- #### Workflow -->
+<!-- fco2_xgb_wf <- workflow() %>%    -->
+<!--     add_model(fco2_xgb_model)  %>%    -->
+<!--     add_recipe(fco2_recipe) -->
+
+<!-- #### Grid -->
+<!-- fco2_xgb_grid <- expand.grid( -->
+<!--     learn_rate = c(0.10, 0.15, 0.25, 0.50), -->
+<!--     trees = c(100, 250, 500) -->
+<!-- ) -->
+
+<!-- fco2_xgb_tune_grid <- fco2_xgb_wf   %>%    -->
+<!--   tune_grid( -->
+<!--     resamples = fco2_resamples, -->
+<!--     grid = fco2_xgb_grid, -->
+<!--     control = control_grid(save_pred = TRUE,  -->
+<!--                            verbose = FALSE,  -->
+<!--                            allow_par = TRUE), -->
+<!--     metrics = metric_set(rmse) -->
+<!--   ) -->
+
+<!-- #### Melhores hiperparâmetros -->
+<!-- autoplot(fco2_xgb_tune_grid) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- fco2_xgb_tune_grid  %>%    -->
+<!--   show_best(metric = "rmse", n = 5) -->
+<!-- fco2_xgb_select_best_passo5 <- fco2_xgb_tune_grid %>% -->
+<!--   select_best(metric = "rmse") -->
+<!-- fco2_xgb_select_best_passo5 -->
+<!-- ``` -->
+
+<!-- ## Desempenho dos modelos finais -->
+
+<!-- ```{r} -->
+<!-- fco2_xgb_model <- boost_tree( -->
+<!--   mtry = fco2_xgb_select_best_passo4$mtry, -->
+<!--   trees = fco2_xgb_select_best_passo5$trees, -->
+<!--   min_n = fco2_xgb_select_best_passo2$min_n, -->
+<!--   tree_depth = fco2_xgb_select_best_passo2$tree_depth,  -->
+<!--   loss_reduction = fco2_xgb_select_best_passo3$loss_reduction,  -->
+<!--   learn_rate = fco2_xgb_select_best_passo5$learn_rate,  -->
+<!--   sample_size = fco2_xgb_select_best_passo4$sample_size -->
+<!-- ) %>%   -->
+<!--   set_mode("regression")  %>%   -->
+<!--   set_engine("xgboost", nthread = cores, counts = FALSE) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- df <- data.frame( -->
+<!--   mtry = fco2_xgb_select_best_passo4$mtry, -->
+<!--   trees = fco2_xgb_select_best_passo5$trees, -->
+<!--   min_n = fco2_xgb_select_best_passo2$min_n, -->
+<!--   tree_depth = fco2_xgb_select_best_passo2$tree_depth,  -->
+<!--   loss_reduction = fco2_xgb_select_best_passo3$loss_reduction,  -->
+<!--   learn_rate = fco2_xgb_select_best_passo5$learn_rate,  -->
+<!--   sample_size = fco2_xgb_select_best_passo4$sample_size -->
+<!-- ) -->
+<!-- fco2_xgb_wf <- fco2_xgb_wf %>% finalize_workflow(df) # <------ -->
+<!-- fco2_xgb_last_fit <- last_fit(fco2_xgb_wf, fco2_initial_split) # <-------- -->
+<!-- ``` -->
+
+<!-- ## Criar Preditos -->
+
+<!-- ```{r} -->
+<!-- fco2_test_preds <- bind_rows( -->
+<!--   collect_predictions(fco2_xgb_last_fit)  %>%    -->
+<!--     mutate(modelo = "xgb") -->
+<!-- ) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- fco2_test_preds %>%  -->
+<!--   ggplot(aes(x=.pred, y = fco2)) + -->
+<!--   geom_point()+ -->
+<!--   theme_bw() + -->
+<!--   geom_smooth(method = "lm") + -->
+<!--   stat_regline_equation(ggplot2::aes( -->
+<!--   label =  paste(..eq.label.., ..rr.label.., sep = "*plain(\",\")~~")))+ -->
+<!--   geom_abline (slope=1, linetype = "dashed", color="Red") -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- fco2_xgb_last_fit_model <-fco2_xgb_last_fit$.workflow[[1]]$fit$fit -->
+<!-- vip(fco2_xgb_last_fit_model, -->
+<!--     aesthetics = list(color = "black", fill = "orange")) + -->
+<!--     theme(axis.text.y=element_text(size=rel(1.5)), -->
+<!--           axis.text.x=element_text(size=rel(1.5)), -->
+<!--           axis.title.x=element_text(size=rel(1.5)) -->
+<!--           ) -->
+<!-- ``` -->
+
+<!-- ## Métricas -->
+
+<!-- ```{r} -->
+<!-- da <- fco2_test_preds %>%  -->
+<!--   filter(fco2 > 0, .pred>0 ) -->
+
+<!-- my_r <- cor(da$fco2,da$.pred) -->
+<!-- my_r2 <- my_r*my_r -->
+<!-- my_mse <- Metrics::mse(da$fco2,da$.pred) -->
+<!-- my_rmse <- Metrics::rmse(da$fco2, -->
+<!--                          da$.pred) -->
+<!-- my_mae <- Metrics::mae(da$fco2,da$.pred) -->
+<!-- my_mape <- Metrics::mape(da$fco2,da$.pred)*100 -->
+
+<!-- vector_of_metrics <- c(r=my_r, R2=my_r2, MSE=my_mse, RMSE=my_rmse, MAE=my_mae, MAPE=my_mape) -->
+<!-- print(data.frame(vector_of_metrics)) -->
+<!-- ``` -->
 
 
